2008.06.21 oubiwann

* Updated the docs for the web api.
* Added an admin definitions file for use with admin scripts.
* Changed commit.sh to use the defs.
* Added push.sh.
* Updated the scheduler docs.
* Updated the configuration docs.
* Changed the date separators.
* Added the changes from the last couple days to the change log.
* Grouped changes by day.
* Removed the indents from the ChangeLog.
* Added commit script.
* Added an admin clean script.
* Moved txlb.web to txlb.admin.
* Moved the .pem file generation to the etc dir.
* Finished ferrting out the old project name and references in all the code.
* Incremented version number (for next release).
* Fixed setup.py.
* Added admin scripts for running servers during development.
* Renamed the .tac file to accord with the project name.
* Fixed a typo in the LICENSE.
* File house cleaning.
* Removed package info file.
* Removed load profiling code.
* Updated TODO with current status.
* Fixed old import in setup.py.
* Updated the version number for the txLoadBalancer release. This release breaks compatibility with PyDirector.
* Cleaned up imports, renamed files, and removed old threading or asyncore files.
* Removed the old scripts.
* Updated the imports.
* Updated the .tac file to adjust for the new location of the example config.
* Added another example config.
* Renamed some files and moved the example config.
* Renamed the lib dir to txlb.
* Adjusted setup.py in anticipation of the fork to txLoadBalancer.
* Fixed typo in setup.py.
* Incremented version number, updated setup.py, and updated the license.
* Added support for basic auth to twisted-based web ui.
* Added support for HTTPS to twisted-based web ui.
* Cleaned up imports.
* Added a place for setting up HTTPS.
* Updated TODO.
* Added support for adding hosts through the twisted admin web ui.
* Adjusted the TODO.
* Added support for deleting hosts.
* Updated TODO.
* Added rendering of stored xml config in twisted-based admin web ui.